test/TestPhases/typechecker/invalid/ReturnMissing2.blc
module ReturnMissing2

function calc() returns int64
    
end

activity main ()()
    let x = calc()
    await false
end
